syntax = "proto3";

package auth;

option go_package = "github.com/care0717/deepthought-api/grpc/proto/auth";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse { string access_token = 1; }

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {};
}
