syntax = "proto3";

package deepthought;

option go_package = "github.com/care0717/deepthought-api/grpc/proto/deepthought";

message BootRequest {
    bool silent = 1;
}

message BootResponse {
    string message = 1;
}

message InferRequest {
    string query = 1;
}

message InferResponse {
    sint64 answer = 1;
    reserved 2;
    reserved "description";
}

service Compute {
    rpc Boot(BootRequest) returns (stream BootResponse);

    rpc Infer(InferRequest) returns (InferResponse);
}
